// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Editor basic add stamps to inline value 1`] = `
"[~]
[?] <買> vs <賣>？ %000
[+]
[-]"
`;

exports[`Editor basic add stamps to inline value 2`] = `
Array [
  Object {
    "linenumber": 1,
    "marker": Object {
      "key": "[?]",
      "value": "<買> vs <賣>？",
    },
    "new": true,
    "poll": true,
    "pollChoices": Array [
      "<買>",
      "<賣>",
    ],
    "stampId": "%000",
    "str": " <買> vs <賣>？",
  },
]
`;

exports[`Editor basic attach dblink 1`] = `
"[~]
[?] <買> vs <賣>？ %000
[+]
[-]"
`;

exports[`Editor basic attach dblink 2`] = `
Array [
  Object {
    "anchorId": 444,
    "commentId": 222,
    "linenumber": 1,
    "marker": Object {
      "key": "[?]",
      "value": "<買> vs <賣>？",
    },
    "poll": true,
    "pollChoices": Array [
      "<買>",
      "<賣>",
    ],
    "pollId": 111,
    "replyId": 333,
    "stampId": "%000",
    "str": " <買> vs <賣>？",
    "userId": "user-id",
  },
]
`;

exports[`Editor basic insert markerlines to a blank editor 1`] = `
"
[?]
<買> vs <賣>？ %000
"
`;

exports[`Editor basic insert markerlines to a blank editor 2`] = `
Array [
  Object {
    "linenumber": 2,
    "marker": Object {
      "key": "[?]",
      "value": "<買> vs <賣>？",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": undefined,
    "srcStamp": "%000",
    "stampId": "%000",
    "str": "<買> vs <賣>？ %000",
  },
]
`;

exports[`Editor basic insert markerlines to an editxor with existed value 1`] = `
"[~]
[[生物技術]] %001
[?] <買> vs <賣>？ %000
[+]
@巴菲特2020Q4加倉 %003
@ARK開倉 %002
[-]
"
`;

exports[`Editor basic insert markerlines to an editxor with existed value 2`] = `
Array [
  Object {
    "linenumber": 1,
    "marker": Object {
      "key": "[~]",
      "value": "[[生物技術]]",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": undefined,
    "srcStamp": "%000",
    "stampId": "%001",
    "str": "[[生物技術]] %001",
  },
  Object {
    "comment": undefined,
    "linenumber": 2,
    "marker": Object {
      "key": "[?]",
      "value": "<買> vs <賣>？",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": true,
    "pollChoices": Array [
      "<買>",
      "<賣>",
    ],
    "src": undefined,
    "stampId": "%000",
    "str": " <買> vs <賣>？ %000",
  },
  Object {
    "linenumber": 4,
    "marker": Object {
      "key": "[+]",
      "value": "@巴菲特2020Q4加倉",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": undefined,
    "srcStamp": "%002",
    "stampId": "%003",
    "str": "@巴菲特2020Q4加倉 %003",
  },
  Object {
    "linenumber": 5,
    "marker": Object {
      "key": "[+]",
      "value": "@ARK開倉",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": undefined,
    "srcStamp": "%001",
    "stampId": "%002",
    "str": "@ARK開倉 %002",
  },
]
`;

exports[`Editor basic insert markerlines to an editxor with existed value and connected contents 1`] = `
"[~]
[[生物技術]] %001
[?] <買> vs <賣>？ %000
[+]
[-]
"
`;

exports[`Editor basic insert markerlines to an editxor with existed value and connected contents 2`] = `
Array [
  Object {
    "linenumber": 1,
    "marker": Object {
      "key": "[~]",
      "value": "[[生物技術]]",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": undefined,
    "srcStamp": "%000",
    "stampId": "%001",
    "str": "[[生物技術]] %001",
  },
  Object {
    "comment": undefined,
    "linenumber": 2,
    "marker": Object {
      "key": "[?]",
      "value": "<買> vs <賣>？",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": true,
    "pollChoices": Array [
      "<買>",
      "<賣>",
    ],
    "src": undefined,
    "stampId": "%000",
    "str": " <買> vs <賣>？ %000",
  },
]
`;

exports[`Editor basic parse stamped inline value 1`] = `
Array [
  Object {
    "root": true,
    "stream": Array [
      Object {
        "content": Array [
          Object {
            "content": "[~]",
            "length": 3,
            "linenumber": 0,
            "marker": Object {
              "key": "[~]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 0,
        "type": "inline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[?]",
            "length": 3,
            "linenumber": 1,
            "marker": Object {
              "key": "[?]",
            },
            "type": "inline-mark",
          },
          Object {
            "content": Array [
              " ",
              Object {
                "content": "<買>",
                "length": 3,
                "linenumber": 1,
                "type": "vote-chocie",
              },
              " vs ",
              Object {
                "content": "<賣>",
                "length": 3,
                "linenumber": 1,
                "type": "vote-chocie",
              },
              "？ ",
              Object {
                "content": "%000",
                "length": 4,
                "linenumber": 1,
                "type": "stamp",
              },
            ],
            "length": 17,
            "linenumber": 1,
            "marker": Object {
              "key": "[?]",
              "value": "<買> vs <賣>？",
            },
            "type": "inline-value",
          },
        ],
        "length": 20,
        "linenumber": 1,
        "type": "inline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[+]",
            "length": 3,
            "linenumber": 2,
            "marker": Object {
              "key": "[+]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 2,
        "type": "inline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[-]",
            "length": 3,
            "linenumber": 3,
            "marker": Object {
              "key": "[-]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 3,
        "type": "inline-marker",
      },
    ],
  },
]
`;

exports[`Editor use sample data does basic edit 1`] = `
"
[?]<買> vs <賣>？ %100
[~] [[生物技術]] %000
[+]
@ARK開倉 %001
@巴菲特2020Q4加倉 %002
[-]"
`;

exports[`Editor use sample data does basic edit 2`] = `
Array [
  Object {
    "broken": true,
    "linenumber": 1,
    "marker": Object {
      "key": "[?]",
      "value": "<買> vs <賣>？",
    },
    "nestedCard": undefined,
    "stampId": "%100",
    "str": "<買> vs <賣>？ %100",
  },
  Object {
    "comment": undefined,
    "linenumber": 2,
    "marker": Object {
      "key": "[~]",
      "value": "[[生物技術]]",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": "@someauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "some.source",
    "stampId": "%000",
    "str": " [[生物技術]]",
  },
  Object {
    "comment": undefined,
    "linenumber": 4,
    "marker": Object {
      "key": "[+]",
      "value": "@ARK開倉",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": "@someauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "some.source",
    "stampId": "%001",
    "str": "@ARK開倉",
  },
  Object {
    "comment": undefined,
    "linenumber": 5,
    "marker": Object {
      "key": "[+]",
      "value": "@巴菲特2020Q4加倉",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": "@someauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "some.source",
    "stampId": "%002",
    "str": "@巴菲特2020Q4加倉",
  },
]
`;

exports[`Editor use sample data edit text from previous stored text 1`] = `
"$PLTR
[=] [[大數據]] [[SaaS]] %000
[?] B@23-25 小倉位 %001
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪
- 情報
- 企業決策中心
[+]
提供政府服務 %002
營收增長高 %003
利潤率進步 %004
[-]
至今10多年仍無法盈利 %005
需要商業化，不僅是做政府生意 %006

[[太空股]]
[+]
有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化 %007"
`;

exports[`Editor use sample data edit text from previous stored text 2`] = `
"$PLTR
[=] [[大數據]] [[SaaS]] %hF7
[?] B@23-25 小倉位 %3qR
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %3Wx
- 情報 %5uM
- 企業決策中心 %Bv0
對象：各國政府，FBI、CIA、美軍等 %000
有125個客戶，企業營收佔44%，除美國外商業營收增長低 %001
[+]
提供政府服務 %nhh
營收增長高 %Hfx
利潤率進步 %xB7
現金充足，財務沒有問題 %002
有炒股動力，@ARK、@WSB皆關注 %003
[-]
至今10多年仍無法盈利 %i61
需要商業化，不僅是做政府生意 %vYk
股權獎勵高，拉低盈利 %004
很難做到像消費者級別的量，增長的想像空間不大 %005

[[太空股]]
[+]
有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化 %vjo
[[Elon Musk]]、[[Bezos]]、[[Ark]]均投入太空市場 %006
太空商業化將帶來新的商業模式 %007"
`;

exports[`Editor use sample data generate markerline 1`] = `
"$PLTR
[=] [[大數據]] [[SaaS]] %000
[?] B@23-25 小倉位 %001
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪
- 情報
- 企業決策中心
對象：各國政府，FBI、CIA、美軍等 %002
有125個客戶，企業營收佔44%，除美國外商業營收增長低 %003
[+]
提供政府服務 %004
營收增長高 %005
利潤率進步 %006
現金充足，財務沒有問題 %007
有炒股動力，@ARK、@WSB皆關注 %008
[-]
至今10多年仍無法盈利 %009
需要商業化，不僅是做政府生意 %00a
股權獎勵高，拉低盈利 %00b
很難做到像消費者級別的量，增長的想像空間不大 %00c"
`;

exports[`Editor use sample data generate markerline 2`] = `
Array [
  Object {
    "comment": undefined,
    "linenumber": 1,
    "marker": Object {
      "key": "[=]",
      "value": "[[大數據]] [[SaaS]]",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%000",
    "str": " [[大數據]] [[SaaS]]",
  },
  Object {
    "comment": true,
    "linenumber": 2,
    "marker": Object {
      "key": "[?]",
      "value": "B@23-25 小倉位",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%001",
    "str": " B@23-25 小倉位",
  },
  Object {
    "comment": undefined,
    "linenumber": 7,
    "marker": Object {
      "key": "[*]",
      "value": "對象：各國政府，FBI、CIA、美軍等",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%002",
    "str": "對象：各國政府，FBI、CIA、美軍等",
  },
  Object {
    "comment": undefined,
    "linenumber": 8,
    "marker": Object {
      "key": "[*]",
      "value": "有125個客戶，企業營收佔44%，除美國外商業營收增長低",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%003",
    "str": "有125個客戶，企業營收佔44%，除美國外商業營收增長低",
  },
  Object {
    "comment": undefined,
    "linenumber": 10,
    "marker": Object {
      "key": "[+]",
      "value": "提供政府服務",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%004",
    "str": "提供政府服務",
  },
  Object {
    "comment": undefined,
    "linenumber": 11,
    "marker": Object {
      "key": "[+]",
      "value": "營收增長高",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%005",
    "str": "營收增長高",
  },
  Object {
    "comment": undefined,
    "linenumber": 12,
    "marker": Object {
      "key": "[+]",
      "value": "利潤率進步",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%006",
    "str": "利潤率進步",
  },
  Object {
    "comment": undefined,
    "linenumber": 13,
    "marker": Object {
      "key": "[+]",
      "value": "現金充足，財務沒有問題",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%007",
    "str": "現金充足，財務沒有問題",
  },
  Object {
    "comment": undefined,
    "linenumber": 14,
    "marker": Object {
      "key": "[+]",
      "value": "有炒股動力，@ARK、@WSB皆關注",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%008",
    "str": "有炒股動力，@ARK、@WSB皆關注",
  },
  Object {
    "comment": undefined,
    "linenumber": 16,
    "marker": Object {
      "key": "[-]",
      "value": "至今10多年仍無法盈利",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%009",
    "str": "至今10多年仍無法盈利",
  },
  Object {
    "comment": undefined,
    "linenumber": 17,
    "marker": Object {
      "key": "[-]",
      "value": "需要商業化，不僅是做政府生意",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%00a",
    "str": "需要商業化，不僅是做政府生意",
  },
  Object {
    "comment": undefined,
    "linenumber": 18,
    "marker": Object {
      "key": "[-]",
      "value": "股權獎勵高，拉低盈利",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%00b",
    "str": "股權獎勵高，拉低盈利",
  },
  Object {
    "comment": undefined,
    "linenumber": 19,
    "marker": Object {
      "key": "[-]",
      "value": "很難做到像消費者級別的量，增長的想像空間不大",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "%00c",
    "str": "很難做到像消費者級別的量，增長的想像空間不大",
  },
]
`;

exports[`Editor use sample data generate markerline 3`] = `
"$PLTR
[?] \\"预计该股票会有更大的波动性\\" #無幫助 %000
[*]
產品：3个软件平台
- Foundry：帮公司构建自己的SaaS来充当数据应用程序的操作系统，以获取预测，可能的结果，建议等。
- Gotham：用于情报，执法和国防安全领域的软件平台，它可以识别模式并预测数据以帮助预防犯罪。
- Apollo：平台背后的平台，自动监视,管理与更新Foundry和Gotham的软件。类似Microsoft，Apple或Google更新他们软件的方式。
[+]
\\"并不完全地依赖政府。他们还拥有18亿现金\\" %001"
`;

exports[`Editor use sample data generate markerline 4`] = `
Array [
  Object {
    "comment": true,
    "linenumber": 1,
    "marker": Object {
      "key": "[?]",
      "value": "\\"预计该股票会有更大的波动性\\" #無幫助",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.facebook.com/photo?fbid=252791219783086&set=a.235741574821384",
    "stampId": "%000",
    "str": " \\"预计该股票会有更大的波动性\\" #無幫助",
  },
  Object {
    "comment": undefined,
    "linenumber": 8,
    "marker": Object {
      "key": "[+]",
      "value": "\\"并不完全地依赖政府。他们还拥有18亿现金\\"",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.facebook.com/photo?fbid=252791219783086&set=a.235741574821384",
    "stampId": "%001",
    "str": "\\"并不完全地依赖政府。他们还拥有18亿现金\\"",
  },
]
`;

exports[`Editor use sample data handle common cases 1`] = `
"[~] aaa %000
[?]
<買> vs <賣> %001
[+]
[-]"
`;

exports[`Editor use sample data handle common cases 2`] = `
"$AAA
[=]
[?]
- <買> vs <賣> %000
[+]
[-]

[[TOPIC]]
[=]
[?]買 vs 賣？ %001
[+]
[-]

$BBB
[=]
[?]買 vs 賣？ %002
[+]
[-]"
`;

exports[`Editor use sample data insert markerlines 1`] = `
"
[=]
[[大數據]] [[SaaS]] %000
[?]
\\"预计该股票会有更大的波动性\\" #無幫助 %000
B@23-25 小倉位 %001
[*]
有125個客戶，企業營收佔44%，除美國外商業營收增長低 %003
對象：各國政府，FBI、CIA、美軍等 %002
[+]
\\"并不完全地依赖政府。他们还拥有18亿现金\\" %001
有炒股動力，@ARK、@WSB皆關注 %008
現金充足，財務沒有問題 %007
利潤率進步 %006
營收增長高 %005
提供政府服務 %004
[-]
很難做到像消費者級別的量，增長的想像空間不大 %00c
股權獎勵高，拉低盈利 %00b
需要商業化，不僅是做政府生意 %00a
至今10多年仍無法盈利 %009

"
`;

exports[`Editor use sample data insert markerlines 2`] = `
Array [
  Object {
    "linenumber": 2,
    "marker": Object {
      "key": "[=]",
      "value": "[[大數據]] [[SaaS]]",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.facebook.com/photo?fbid=252791219783086&set=a.235741574821384",
    "srcStamp": "%000",
    "stampId": "%000",
    "str": "[[大數據]] [[SaaS]] %000",
  },
  Object {
    "linenumber": 4,
    "marker": Object {
      "key": "[?]",
      "value": "\\"预计该股票会有更大的波动性\\" #無幫助",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.facebook.com/photo?fbid=252791219783086&set=a.235741574821384",
    "srcStamp": "%000",
    "stampId": "%000",
    "str": "\\"预计该股票会有更大的波动性\\" #無幫助 %000",
  },
  Object {
    "linenumber": 5,
    "marker": Object {
      "key": "[?]",
      "value": "B@23-25 小倉位",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.facebook.com/photo?fbid=252791219783086&set=a.235741574821384",
    "srcStamp": "%001",
    "stampId": "%001",
    "str": "B@23-25 小倉位 %001",
  },
  Object {
    "linenumber": 7,
    "marker": Object {
      "key": "[*]",
      "value": "有125個客戶，企業營收佔44%，除美國外商業營收增長低",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%003",
    "stampId": "%003",
    "str": "有125個客戶，企業營收佔44%，除美國外商業營收增長低 %003",
  },
  Object {
    "linenumber": 8,
    "marker": Object {
      "key": "[*]",
      "value": "對象：各國政府，FBI、CIA、美軍等",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%002",
    "stampId": "%002",
    "str": "對象：各國政府，FBI、CIA、美軍等 %002",
  },
  Object {
    "linenumber": 10,
    "marker": Object {
      "key": "[+]",
      "value": "\\"并不完全地依赖政府。他们还拥有18亿现金\\"",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.facebook.com/photo?fbid=252791219783086&set=a.235741574821384",
    "srcStamp": "%001",
    "stampId": "%001",
    "str": "\\"并不完全地依赖政府。他们还拥有18亿现金\\" %001",
  },
  Object {
    "linenumber": 11,
    "marker": Object {
      "key": "[+]",
      "value": "有炒股動力，@ARK、@WSB皆關注",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%008",
    "stampId": "%008",
    "str": "有炒股動力，@ARK、@WSB皆關注 %008",
  },
  Object {
    "linenumber": 12,
    "marker": Object {
      "key": "[+]",
      "value": "現金充足，財務沒有問題",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%007",
    "stampId": "%007",
    "str": "現金充足，財務沒有問題 %007",
  },
  Object {
    "linenumber": 13,
    "marker": Object {
      "key": "[+]",
      "value": "利潤率進步",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%006",
    "stampId": "%006",
    "str": "利潤率進步 %006",
  },
  Object {
    "linenumber": 14,
    "marker": Object {
      "key": "[+]",
      "value": "營收增長高",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%005",
    "stampId": "%005",
    "str": "營收增長高 %005",
  },
  Object {
    "linenumber": 15,
    "marker": Object {
      "key": "[+]",
      "value": "提供政府服務",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%004",
    "stampId": "%004",
    "str": "提供政府服務 %004",
  },
  Object {
    "linenumber": 17,
    "marker": Object {
      "key": "[-]",
      "value": "很難做到像消費者級別的量，增長的想像空間不大",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%00c",
    "stampId": "%00c",
    "str": "很難做到像消費者級別的量，增長的想像空間不大 %00c",
  },
  Object {
    "linenumber": 18,
    "marker": Object {
      "key": "[-]",
      "value": "股權獎勵高，拉低盈利",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%00b",
    "stampId": "%00b",
    "str": "股權獎勵高，拉低盈利 %00b",
  },
  Object {
    "linenumber": 19,
    "marker": Object {
      "key": "[-]",
      "value": "需要商業化，不僅是做政府生意",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%00a",
    "stampId": "%00a",
    "str": "需要商業化，不僅是做政府生意 %00a",
  },
  Object {
    "linenumber": 20,
    "marker": Object {
      "key": "[-]",
      "value": "至今10多年仍無法盈利",
    },
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "srcStamp": "%009",
    "stampId": "%009",
    "str": "至今10多年仍無法盈利 %009",
  },
]
`;
